beian/kustomization/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beian
  template:
    metadata:
      labels:
        app: beian
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-html
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: index-html
        configMap:
          name: beian-index-html
