beian/kustomization/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: beian
spec:
  selector:
    app: beian
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
