beian/kustomization/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beian
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Beian"
    gethomepage.dev/description: "Main entry for ICP"
    gethomepage.dev/group: "Website"
    gethomepage.dev/icon: "https://miro.medium.com/max/358/1*8tS36qcyZ2c-kYF3zSrbfA.png"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: mesh-shaped.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beian
            port:
              number: 80
  tls:
  - hosts:
    - "*.mesh-shaped.top"
    secretName: mesh-shaped-top-wild-tls
